library/pod-security-policy/selinux/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSELinux
metadata:
  name: psp-selinux
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
